[tool.poetry]
name = "sg-law-cookies"
version = "0.1.0"
description = ""
authors = ["houfu <houfu@outlook.sg>"]
readme = "README.md"
packages = [{include = "sg_law_cookies"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"
requests = "^2.31.0"
jinja2 = "^3.1.2"
langchain = "^0.0.333"
openai = "^1.2.0"
tiktoken = "^0.5.1"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
